syntax = "proto3";

import 'google/protobuf/timestamp.proto';

package user;

enum Role {
    REQUEST = 0;
    USER = 10;
    INVITE = 20;
    MODERATOR = 30;
    ADMIN = 40;
}

enum MediaType {
    TEXT = 0;
    FILE = 10;
    QR = 20;
    POST = 30;
    GALLERY = 40;
}

enum Active {
    OFFLINE = 0;
    ONLINE = 10;
    TYPING = 20;
}

enum Visible {
    CLOSE = 0;
    MODERATED = 10;
    OPEN = 20;
}

enum Const {
    users = 0;
    rooms = 10;
    tweets = 20;
    roomusers = 30;

    uid = 40;
    nick = 50;
    displayName = 60;
    email = 70;
    phoneNumber = 80;
    photoURL = 90;
    fcmToken = 100;
    
    status = 110;
    created = 120;
    updated = 130;
    timestamp = 140;
    open = 150;

    members = 160;
    tweet_count = 170;
    description = 180;

    gallery = 190;
}

message User {
    optional string uid = 10;
    optional string displayName = 20;
    optional string nick = 30;
    optional string email = 40;
    optional string phoneNumber = 50;
    optional string photoURL = 60;
    optional Active status = 70;
    repeated string friends = 80;
    optional google.protobuf.Timestamp created = 90;
    optional google.protobuf.Timestamp updated = 100;
    optional Visible open = 110;
}

message Messaging {
    optional string fcmToken = 10;
    optional google.protobuf.Timestamp timestamp = 20;
}

message RoomUser {
    optional string uid = 10;
    optional string user = 20;
    optional string room = 30;
    optional Role role = 40;
    optional google.protobuf.Timestamp created = 50;
    optional google.protobuf.Timestamp updated = 60;
    optional bool subscribed = 70;
}

message Room {
    optional string uid = 10;
    optional string nick = 20;
    optional string displayName = 30;
    optional Visible open = 40;
    optional string photoURL = 50;
    optional string description = 60;
    optional google.protobuf.Timestamp created = 70;
    optional google.protobuf.Timestamp updated = 80;
}

message Tweet {
    optional string uid = 10;
    optional string user = 20;
    optional string room = 30;
    optional string path = 40;
    optional google.protobuf.Timestamp created = 50;
    optional MediaType media_type = 60;
    optional string text = 70;
    optional string link = 80;
    repeated ImageMetadata gallery = 90;
}

message ImageMetadata {
    optional string unsplashurl = 10;
    optional string path = 20;
    optional string localUrl = 30;
    optional int32 width = 40;
    optional int32 height = 50;
    optional string caption = 60;
    optional bool video = 70;
    // optional string blurhash = 60;
}